--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12.8"
 dependencies = [
+    "duckdb>=1.2.1",
     "fastapi>=0.115.11",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
     "pydantic>=2.10.6",
+    "requests>=2.32.3",
     "scikit-learn>=1.6.1",
 ]
